<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ClassTime</string>
    <string name="home">Home</string>
    <string name="dashboard" tools:ignore="ExtraTranslation">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="add_course">Add Course</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send_code">Send Verification Code</string>
    <string name="phone_number_required">Valid phone number required</string>
    <string name="enter_code">Enter the verification code sent to your phone</string>
    <string name="code_required">Valid code required</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_hint">Ex. +1 123-456-7890</string>
    <string name="code_hint">Ex. 123456</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Are you sure you want to sign out of ClassTime?</string>
    <string name="classes_attended">classes attended</string>
    <string name="classes_attended_cap">Classes Attended</string>
    <string name="course_name">Course Name</string>
    <string name="course_name_hint">Ex. Calculus 1</string>
    <string name="course_name_required">Course name required</string>
    <string name="course_code">Course Code</string>
    <string name="course_code_hint">Ex. MATH101</string>
    <string name="course_code_required">Course code required</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="classes_missed">Classes Missed</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_course_message">Are you sure you want to delete this course?</string>
</resources>
