<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name" />

        <EditText
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/course_name_hint"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/courseCode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/course_code_hint"
            android:inputType="textCapSentences" />

        <Button
            android:id="@+id/addCourseBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_course"/>

    </LinearLayout>

</ScrollView>