<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/sendCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/send_code"/>

</LinearLayout>