<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name" />

        <TextView
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/courseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_attended_cap"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/subtractAttended"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/classesAttended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <Button
                android:id="@+id/addAttended"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:background="@color/colorAccent"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_missed"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/subtractMissed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/classesMissed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <Button
                android:id="@+id/addMissed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:background="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>